--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "autoprefixer": "^10.2.5",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
     "postcss": "^8.2.13",
+    "prettier": "^2.2.1",
     "tailwindcss": "^2.1.2",
     "typescript": "4.0"
   },
