--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,13 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "esnext"
+    "target": "esnext",
+    "baseUrl": ".",
+    "paths": {
+      "@/context/*": ["context/*"],
+      "@/components/*": ["components/*"],
+      "@/hooks/*": ["hooks/*"]
+    }
   },
   "exclude": ["node_modules"],
   "include": ["**/*.ts", "**/*.tsx"]
